--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Gemini Sudoku"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo180.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://kit.fontawesome.com/2017e6876a.js" crossorigin="anonymous"></script>
     <title>Sudoku</title>
   </head>
   <body>
